--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     font-weight: 500;
     outline: 0;
-    padding: 1rem;
+    padding: 1.5rem 2rem;
     text-transform: uppercase;
     touch-action: manipulation;
 
