adding dropdown for mobile & desktop; switched animations to use hardware acceleration

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -8,7 +8,6 @@
       <ul class="nav-menu">
           <li class="nav-menu-item"><a href="/news">News</a></li>
           <li class="nav-menu-item"><a href="/contact">Contact</a></li>
-          <li class="nav-menu-item"><a href="/about">About</a></li>
           <li class="nav-menu-item"><a href="/give">Give</a></li>
           <li class="nav-menu-item"><a href="/login">Login</a></li>
       </ul>
@@ -30,9 +29,27 @@
           </span>
 
         <ul class="nav-menu" id="main-nav">
-          <li class="nav-menu-item"><a href="/subjects">Subjects</a></li>
+          <li class="nav-menu-item parent"><a href="/subjects">Subjects</a>
+            <ul class="secondary-nav">
+              <li class="nav-menu-item"><a href="/subjects/all">All</a></li>
+              <li class="nav-menu-item"><a href="/subjects/math">Math</a></li>
+              <li class="nav-menu-item"><a href="/subjects/science">Science</a></li>
+              <li class="nav-menu-item"><a href="/subjects/social-sciences">Social Sciences</a></li>
+              <li class="nav-menu-item"><a href="/subjects/history">History</a></li>
+              <li class="nav-menu-item"><a href="/subjects/ap">AP</a></li>
+            </ul>
+          </li>
           <li class="nav-menu-item"><a href="/higher-ed">Higher Education</a></li>
           <li class="nav-menu-item"><a href="/k-12">K-12</a></li>
+          <li class="nav-menu-item parent"><a href="/our-impact">Our Impact</a>
+            <ul class="secondary-nav">
+              <li class="nav-menu-item"><a href="/success-stories">Success Stories</a></li>
+              <li class="nav-menu-item"><a href="/our-team">Our Team</a></li>
+              <li class="nav-menu-item"><a href="/allies">Allies</a></li>
+              <li class="nav-menu-item"><a href="/careers">Careers</a></li>
+            </ul>
+          </li>
+
         </ul>
 
           <button class="expand-nav" type="button" role="button" aria-label="Toggle Navigation">
