--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -39,12 +39,6 @@ body {
     }
 }
 
-// .sticky {
-//   position: fixed;
-//   top: 0;
-//   z-index: 99;
-// }
-
 .container {
   display: inherit;
   margin: 0 auto;
@@ -60,14 +54,12 @@ body {
     //width: 100vw;
     width: 100%;
     height: 70px;
-    background: #fff;
     overflow: hidden;
+    background: #fff;
     position: fixed;
     top:0;
     left:0;
     z-index: 100;
-    transition: all 0.5s 0.4s;
-
     //ordering
     .meta-nav { order: 2; }
     .main-nav { order: 1; }
@@ -79,11 +71,12 @@ body {
     }
 
     .nav-menu {
-      //opacity: 0;
+      padding: 0 0 0 8rem;
+      //left:-50%;
       .nav-menu-item {
-        margin: 1rem 0;
-        margin-left: -12000px;
-        transition: all 0.5s;
+        margin: 0 0 0.5rem;
+        //margin-left: -12000px;
+        //transition: all 0.5s;
         // &:nth-child(2) {
         //   margin-left: -2300px;
         // }
@@ -104,7 +97,6 @@ body {
       .nav-menu {
         flex: 1 100%;
         margin: 0;
-        padding: 0;
         list-style: none;
         a {color: #0DC0DC;}
 
@@ -116,14 +108,13 @@ body {
         padding: 1.5rem;
         border-top: 1px solid transparentize(#E5E5E5, 0.5);
         position: absolute;
-        bottom: -70px;
+        bottom: 0px;
         left: 0;
         width: 100%;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
-        transition: bottom 0.3s;
         &::after {
           content: "\00a9  Rice University";
           color: #9A9A9B;
@@ -133,6 +124,9 @@ body {
     }
 
     .main-nav {
+      z-index:1;
+      background: #fff;
+      height: 70px;
       > .container {
         display: flex;
         justify-content: space-between;
@@ -167,24 +161,28 @@ body {
         flex: 1 100%;
         order: 3;
         margin: 1.5rem 0 0;
-        padding: 0;
         list-style: none;
-        transform: translateY(0%);
-        transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+        .nav-menu-item {
+          margin: 0 0 1rem;
+        }
         a {
           color: #00246A;
           font-size: 2.2rem;
           font-weight: 600;
         }
         &.clone {
-          transform: translateY(-200%);
-          transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
           position:absolute;
           right: 6rem;
           top: 0;
           height: 70px;
           align-items: center;
         }
+      }
+      .secondary-nav {
+        visibility: hidden;
+        transform: scale3d(0,0,0);
+        position: absolute;
+        top:0;
       }
     }
 
@@ -256,51 +254,160 @@ body {
   body.active {
     overflow: hidden;
   }
-  .page-header.active {
-    right: 0;
-    bottom: 0;
-    width:100%;
-    height:100%;
-    background: #fff;
-    transition: all 0.5s;
+  .page-header {
+    //transition: all 0.3s;
 
-    .meta-nav {
-      //display: inherit;
-      .logo-wrapper {
-        bottom: 0;
-        transition: bottom 0.3s 0.6s;
-      }
-    }
-    .main-nav {
-      svg .st5 {
-        opacity: 0;
-        transition: opacity 0.5s;
-      }
-      svg #grey {
-        opacity: 1;
-      }
-      .nav-menu.clone {
-        transform: translateY(-300%);
-      }
+    .main-nav .nav-menu.clone {
+      transform: scale3d(0, 0, 0);
     }
     .nav-menu {
-      //display: flex;
-      //opacity: 1;
-      flex-flow: column nowrap;
-      .nav-menu-item {
-        margin-left: 0;
-        transition: all 0.5s 0.6s;
-        &:nth-child(2) {
-          transition: all 0.7s 0.7s;
+      opacity: 0;
+    }
+    .meta-nav {
+      .logo-wrapper {
+        transform: translate3d(0, 100%, 0);
+      }
+    }
+    &.active {
+      right: 0;
+      bottom: 0;
+      width:100%;
+      height:100%;
+      background: #fff;
+      transition: all 0.5s;
+
+      .meta-nav {
+        //display: inherit;
+        &.open .nav-menu {
+          transform: translate3d(-1000px, 0, 0);
+          transition: transform 0.5s;
         }
-        &:nth-child(3) {
-          transition: all 0.8s 0.7s;
+        .logo-wrapper {
+          //bottom: 0;
+          transform: translate3d(0, 0, 0);
+          transition: transform 0.3s 0.6s;
         }
-        &:nth-child(4) {
-          transition: all 0.9s 0.7s;
+      }
+      .main-nav {
+        height: auto;
+        position:relative;
+        svg .st5 {
+          opacity: 0;
+          transition: opacity 0.5s;
         }
-        &:nth-child(5) {
-          transition: all 1s 0.7s;
+        svg #grey {
+          opacity: 1;
+        }
+        .nav-menu {
+          &:not(.clone) {
+            //transform: translate3d(0, 0, 0);
+            //transition: transform 0.5s;
+            //top:150px;
+            //left :50%;
+            //transform: translate(-50%,-50%);
+            //margin-right:-50%;
+            //position:absolute;
+            //transform: translate3d(0, 0, 0);
+            //transition: transform 0.5s;
+          }
+          .nav-menu-item .secondary-nav {
+            //visibility: visible;
+          //  transform: scale3d(0,0,0) translate3d(-1000px,0,0);
+            //transition: transform 0.5s;
+
+          }
+          &.open {
+            transform: translate3d(-1000px, 0, 0);
+            transition: transform 0.5s;
+            .nav-menu-item.open .secondary-nav {
+              visibility: visible;
+              transform: scale3d(1,1,1) translate3d(1000px,0,0);
+              //transition: transform 0.5s 0.6s;
+              //margin:0px;
+              //padding:0px;
+              //list-style: none;
+              .nav-menu-item:not(.clone) {
+                //margin-left: 1rem;
+              }
+              .clone {
+                margin-left: -67px;
+                list-style: none;
+                //padding:0px;
+
+              }
+              .back {
+                position: relative;
+                display: inline-block;
+                width: 27px;
+                height: 27px;
+                text-indent: -9999px;
+                &::before,
+                &::after {
+                  border-right: 2px solid;
+                  content: '';
+                  display: block;
+                  height: 10px;
+                  margin-top: -7px;
+                  position: absolute;
+                  transform: rotate3d(0,0,1,45deg);
+                  left: 5px;
+                  top: 50%;
+                  width: 0;
+                  cursor: pointer;
+                }
+
+                &::after {
+                  margin-top: -1px;
+                  transform: rotate3d(0,0,1,135deg);
+                }
+              }
+            }
+          }
+        }
+      }
+      .nav-menu {
+        display: flex;
+        opacity: 1;
+        transition: opacity 0.5s 0.7s;
+        flex-flow: column nowrap;
+
+        .nav-menu-item {
+          //margin-left: 0;
+          //transition: all 0.5s 0.6s;
+          // &:nth-child(2) {
+          //   transition: all 0.7s 0.7s;
+          // }
+          // &:nth-child(3) {
+          //   transition: all 0.8s 0.7s;
+          // }
+          // &:nth-child(4) {
+          //   transition: all 0.9s 0.7s;
+          // }
+          // &:nth-child(5) {
+          //   transition: all 1s 0.7s;
+          // }
+          &.parent {
+            a {position: relative;}
+            > a:before,
+            > a:after {
+              border-right: 2px solid;
+              content: '';
+              display: block;
+              height: 10px;
+              margin-top: -7px;
+              position: absolute;
+              transform: rotate3d(0,0,1,135deg);
+              right: -20px;
+              top: 50%;
+              width: 0;
+            }
+
+            > a:after {
+              margin-top: -1px;
+              transform: rotate3d(0,0,1,45deg);
+            }
+
+          }
         }
       }
     }
@@ -314,7 +421,6 @@ body {
     position: absolute;
     top: auto;
     left: auto;
-    background: transparent;
     overflow: visible;
 
     .meta-nav {
@@ -331,6 +437,7 @@ body {
       .nav-menu {
         flex: 0 0 auto;
         display: flex;
+        padding: 0;
       }
       .logo-wrapper {
         position: static;
@@ -347,8 +454,8 @@ body {
       }
     }
     .main-nav {
-      overflow: hidden;
-
+      //overflow: hidden;
+      height: 70px;
       > .container {
         align-items: center;
         position: relative;
@@ -363,10 +470,56 @@ body {
         margin-top: 0px;
         flex: 1 auto;
         justify-content: flex-end;
-        .nav-menu-item {
+        padding: 0;
+        transform: translate3d(0, 0, 0);
+        transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+        &.clone {
+          transform: translate3d(0, -200%, 0);
+          transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+        }
+        > .nav-menu-item {
           margin: 0px;
+          padding: 1rem 0;
+          &.parent {
+            position: relative;
+            &:hover .secondary-nav {
+              transform: scale3d(1,1,1) translate3d(-50%, 0, 0);
+              visibility: visible;
+              position: absolute;
+              top: 40px;
+              left: 50%;
+              background: #fff;
+              list-style: none;
+              margin: 0;
+              padding: 0;
+              //width: 100%;
+              //overflow:hidden;
+              //display:block;
+              border-top: 4px solid #F0F0F0;
+
+              .nav-menu-item {
+                white-space: nowrap;
+                margin:1rem 0;
+                &:first-child > a {
+                    margin-left: 0;
+                }
+
+                &:last-child > a {
+                    margin-right: 0;
+                }
+                a {
+                  display: block;
+                  width:100%;
+                  margin:0;
+                  font-weight: 300;
+                  //white-space: nowrap;
+                  font-size: 1.6rem;
+                }
+              }
+            }
+          }
           > a {
-            color:#fff;
+            //color:#fff;
             font-size: 1.8rem;
           }
         }
@@ -403,7 +556,14 @@ body {
         width: 100%;
         transition: all 0.5s;
         background: #fff;
-
+        .nav-menu {
+          opacity: 1;
+          transition: 0.3s transform cubic-bezier(.3,.73,.3,.74), opacity 0.5s;
+          .clone {
+            transform: translate3d(0, -70px, 0);
+            //transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+          }
+        }
         .nav-menu .nav-menu-item > a {
           color: #5E6062;
         }
@@ -415,12 +575,15 @@ body {
       }
       &.active {
         .main-nav {
+          //overflow:hidden;
           .nav-menu {
-            transform: translateY(200%);
-            transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+            transform: translate3d(0, 70px, 0) scale3d(0,0,0);
+            transition: 0.3s transform cubic-bezier(.3,.73,.3,.74), opacity 0.1s;
+            opacity: 0;
             &.clone {
-              transform: translateY(0%);
-              transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
+              opacity: 1;
+              transform: translate3d(0, 0, 0);
+              transition: opacity 0.3s, 0.3s transform cubic-bezier(.3,.73,.3,.74);
 
             }
           }
@@ -433,16 +596,16 @@ body {
         transition: top 0.5s 0.3s;
       }
     }
-    &:not(.sticky) {
-      .logo-wrapper {
-        svg .st5,
-        svg .st8,
-        svg .st12,
-        svg .st11,
-        svg .st36, {
-          fill: #fff!important;
-        }
-      }
-    }
+    // &:not(.sticky) {
+    //   .logo-wrapper {
+    //     svg .st5,
+    //     svg .st8,
+    //     svg .st12,
+    //     svg .st11,
+    //     svg .st36, {
+    //       fill: #fff!important;
+    //     }
+    //   }
+    // }
   }
 }
