--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,16 @@
 @import 'variables';
 @import 'mixins';
 
+// General overrides
+
+p, .btn {
+	margin: 1rem 0 0;
+}
+
+.larger {
+	font-size: 2.4rem
+}
+
 html {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 62.5%;
@@ -12,9 +22,11 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     margin: 0;
     min-height: 100vh;
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
     #main {
         display: flex;
@@ -23,6 +35,7 @@ body {
         > div {
             display: flex;
             width: 100vw;
+            flex-direction: column;
         }
     }
 }
@@ -34,12 +47,6 @@ body {
 a {
     color: color(primary);
     text-decoration: none;
-}
-
-.text-content {
-    flex-direction: column;
-    margin: 0 auto;
-    max-width: 120rem;
 }
 
 .sr-only {
@@ -90,4 +97,3 @@ a {
 @import 'components/headers';
 @import 'components/responsive';
 @import 'components/social';
-@import 'components/forms';
