--- a/src/styles/mixins/responsive.scss
+++ b/src/styles/mixins/responsive.scss
@@ -1,5 +1,41 @@
 @import 'variables';
 
+@mixin small { // <= 640
+    @media (max-width: #{breakpoints(small)}) {
+        @content;
+    }
+}
+
+@mixin medium {	// 641 - 768
+    @media (min-width: #{breakpoints(small) + 1}) and (max-width: #{breakpoints(medium)}) {
+        @content;
+    }
+}
+
+@mixin medium-up { // >= 641
+    @media (min-width: #{breakpoints(small) + 1}) {
+        @content;
+    }
+}
+
+@mixin medium-down { // <= 767
+    @media (max-width: #{breakpoints(medium) - 1}) {
+        @content;
+    }
+}
+
+@mixin large { // >= 1024
+    @media (min-width: #{breakpoints(large)}) {
+        @content;
+    }
+}
+
+@mixin large-up { // >= 769
+    @media (min-width: #{breakpoints(medium) + 1}) {
+        @content;
+    }
+}
+
 @mixin phone {
     @media (max-width: #{breakpoints(phone)}) {
         @content;
