--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -2,6 +2,9 @@ $breakpoints: (
     phone: 480px,
     tablet: 768px,
     desktop: 1280px
+    small: 640px,
+    medium: 768px,
+    large: 1024px
 );
 
 @function breakpoints($breakpoint) {
