--- a/src/styles/variables/settings.scss
+++ b/src/styles/variables/settings.scss
@@ -1,2 +1,4 @@
 // boxed view 1200px
 $boxed-width: 120rem;
+$button-size : 3.0rem;
+$transition: .3s; // increase this to see the transformations in slow-motion
