--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -1,5 +1,5 @@
 <style scoped>@import url(/app/components/shell/header/header.css);</style>
-<header class="page-header {{#if collapsed}}collapsed{{/if}} {{#if fixed}}fixed{{/if}} {{#if transparent}}transparent{{/if}}">
+<header class="page-header {{#if collapsed}}collapsed{{/if}} {{#if fixed}}sticky{{/if}} {{#if transparent}}transparent{{/if}}">
     <div class="skiptocontent">
         <a href="#maincontent">skip to main content</a>
     </div>
