--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -13,6 +13,7 @@
     display: flex;
     flex-flow: column;
     width: 100%;
+    height: 70px;
 
     @include medium-up {
       height: 120px;
@@ -459,7 +460,8 @@
           .nav-menu-item {
             @include medium-up {
               white-space: nowrap;
-              margin:1rem 0;
+              padding: 0;
+              margin: 0.5rem 0;
             }
 
             a {
