--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -132,7 +132,7 @@
 
         > a {
           @include medium-up {
-            display: inline-block;
+            display: block;
             padding-left: 2rem;
             padding-right: 2rem;
 
@@ -149,7 +149,19 @@
         order: 1;
         background: #F0F0F0;
         height: 50px;
+
+        @at-root .sticky#{&} {
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          z-index: 1;
+          height:70px;
+          transform: translate3d(-5rem, -70px, 0);
+          background: transparent;
+        }
       }
+
       .container {
         @include medium-up {
           display: flex;
@@ -179,6 +191,12 @@
           flex: 0 0 auto;
           display: flex;
           padding: 0;
+
+          @at-root .sticky.active#{&} {
+            transform: translate3d(0,70px,0);
+            transition: transform 0.5s;
+          }
+
         }
 
         .nav-menu-item {
@@ -193,6 +211,7 @@
 
             @include medium-up {
               color: #555759;
+              font-size: 1.4rem;
               &:active,
               &:focus,
               &:hover {
@@ -239,6 +258,12 @@
           width: auto;
           flex: 0 0 auto;
           padding: 0 0 0 2rem;
+
+          @at-root .sticky.active#{&} {
+            transform: translate3d(0,70px,0);
+            transition: transform 0.5s;
+          }
+
         }
 
         &::after {
@@ -251,7 +276,13 @@
           }
 
         }
-
+        a {
+          background:transparent url('/images/rice.png') 0 0 no-repeat;
+          display: inline-block;
+          width:74px;
+          height:32px;
+          background-size:100% auto;
+        }
       } //end logo-wrapper
 
     } //end meta-nav
@@ -293,6 +324,7 @@
         display: flex;
         justify-content: space-between;
         padding: 1.5rem;
+        height: 100%;
 
         @include medium-up {
           align-items: center;
@@ -303,13 +335,11 @@
 
       .logo-wrapper {
           line-height: 0;
-          height: 100%;
           order: 1;
 
           > a {
               display: inline-block;
-              width: 176px;
-              height: 40px;
+              width: 145px;
               transition: all 0.3s linear;
           }
 
@@ -333,7 +363,22 @@
           }
 
           .logo-quote {
-            display: none;
+            opacity: 0;
+            transform: scale3d(0,0,0);
+            color: #5E6062;
+            font-size: 1.4rem;
+            position: absolute;
+            top: -1000px;
+
+            @include large {
+              vertical-align: text-top;
+              margin-left: 20px;
+              position: relative;
+              top: 1px;
+              opacity: 1;
+              transform: scale3d(1,1,1);
+              transition: opacity 0.3s;
+            }
           }
       } //end logo-wrapper
 
@@ -356,7 +401,7 @@
           flex: 0 0 auto;
           display: flex;
           margin-top: 0px;
-          flex: 1 auto;
+          flex: 1 1 auto;
           justify-content: flex-end;
           padding: 0;
           transform: translate3d(0, 0, 0);
@@ -373,39 +418,12 @@
           }
         }
 
-        &.clone {
-          position:absolute;
-          right: 6rem;
-          top: 0;
-          height: 70px;
-          align-items: center;
-
-          @include small {
-            transform: scale3d(0, 0, 0);
-          }
-
-          @include medium-up {
-            transform: translate3d(0, -200%, 0);
-            transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
-
-            @at-root .sticky#{&} {
-              transform: translate3d(0, -70px, 0);
-            }
-            @at-root .sticky.active#{&} {
-              opacity: 1;
-              transform: translate3d(0, 0, 0);
-              transition: opacity 0.3s, 0.3s transform cubic-bezier(.3,.73,.3,.74);
-            }
-          }
-
-        }
-
         .nav-menu-item {
           margin: 0 0 1rem;
 
           @include medium-up {
             margin: 0px;
-            padding: 1rem 0;
+            //padding: 1rem 0;
           }
 
           &.parent {
