--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -151,12 +151,12 @@
 
         @at-root .sticky#{&} {
           position: fixed;
-          top: 0;
+          top: -70px;
           left: 0;
           right: 0;
           z-index: 1;
-          height:70px;
-          transform: translate3d(-5rem, -70px, 0);
+          height: 70px;
+          transform: translate3d(-5rem, 0px, 0);
           background: transparent;
         }
       }
@@ -191,9 +191,9 @@
           display: flex;
           padding: 0;
 
-          @at-root .sticky.active#{&} {
+          @at-root .sticky.visible.active#{&} {
             transform: translate3d(0,70px,0);
-            transition: transform 0.5s;
+            transition: transform 0.5s 0.6s;
           }
 
         }
@@ -259,9 +259,9 @@
           flex: 0 0 auto;
           padding: 0 0 0 2rem;
 
-          @at-root .sticky.active#{&} {
+          @at-root .sticky.visible.active#{&} {
             transform: translate3d(0,70px,0);
-            transition: transform 0.5s;
+            transition: transform 0.5s 0.6s;
           }
 
         }
